--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SLACK_SIGNING_SECRET=
 SLACK_BOT_TOKEN=xoxb-...
 # If you're deploying the chatbot here, set other env vars
 ANTHROPIC_API_KEY=...
-
+OPENAI_API_KEY=...
 # This is either a specific ID of an assistant or the name of a graph
 # (the key of a graph in the key-value pairs in the langgraph.json file)
 LANGGRAPH_ASSISTANT_ID=chat
